doc/MiniJava_syntax.output
Grammar

    0 $accept: program $end

    1 program: main_class class_decl_list
    2        | main_class

    3 main_class: CLASS ID O_BR PUBLIC STATIC VOID MAIN O_PAREN STRING O_SQ C_SQ ID C_PAREN O_BR statement C_BR C_BR

    4 class_decl_list: class_decl_list class_decl
    5                | class_decl

    6 class_decl: CLASS ID O_BR var_decl_list method_decl_list C_BR
    7           | CLASS ID EXTENDS ID O_BR var_decl_list method_decl_list C_BR
    8           | CLASS ID O_BR var_decl_list C_BR
    9           | CLASS ID EXTENDS ID O_BR var_decl_list C_BR
   10           | CLASS ID O_BR method_decl_list C_BR
   11           | CLASS ID EXTENDS ID O_BR method_decl_list C_BR
   12           | CLASS ID O_BR C_BR
   13           | CLASS ID EXTENDS ID O_BR C_BR

   14 var_decl_list: var_decl_list var_decl
   15              | var_decl

   16 var_decl: INT ID SEMI
   17         | BOOL ID SEMI
   18         | ID ID SEMI
   19         | INT type_bracket_list ID SEMI
   20         | BOOL type_bracket_list ID SEMI
   21         | ID type_bracket_list ID SEMI

   22 type_bracket_list: type_bracket_list O_SQ C_SQ
   23                  | O_SQ C_SQ

   24 method_decl_list: method_decl_list method_decl
   25                 | method_decl

   26 method_decl: PUBLIC type ID O_PAREN formal_list C_PAREN O_BR var_decl_list statement_list RETURN full_exp SEMI C_BR
   27            | PUBLIC type ID O_PAREN C_PAREN O_BR var_decl_list statement_list RETURN full_exp SEMI C_BR
   28            | PUBLIC type ID O_PAREN formal_list C_PAREN O_BR statement_list RETURN full_exp SEMI C_BR
   29            | PUBLIC type ID O_PAREN C_PAREN O_BR statement_list RETURN full_exp SEMI C_BR
   30            | PUBLIC type ID O_PAREN formal_list C_PAREN O_BR var_decl_list RETURN full_exp SEMI C_BR
   31            | PUBLIC type ID O_PAREN C_PAREN O_BR var_decl_list RETURN full_exp SEMI C_BR
   32            | PUBLIC type ID O_PAREN formal_list C_PAREN O_BR RETURN full_exp SEMI C_BR
   33            | PUBLIC type ID O_PAREN C_PAREN O_BR RETURN full_exp SEMI C_BR

   34 formal_list: type ID formal_rest_list
   35            | type ID

   36 formal_rest_list: formal_rest_list formal_rest
   37                 | formal_rest

   38 formal_rest: COMMA type ID

   39 type: prime_type
   40     | type O_SQ C_SQ

   41 prime_type: INT
   42           | BOOL
   43           | ID

   44 statement_list: statement_list statement
   45               | statement

   46 statement: O_BR statement_list C_BR
   47          | O_BR C_BR
   48          | IF O_PAREN full_exp C_PAREN statement ELSE statement
   49          | WHILE O_PAREN full_exp C_PAREN statement
   50          | PRINT_STATE O_PAREN full_exp C_PAREN SEMI
   51          | PRINT_STATE O_PAREN STRING_LITERAL C_PAREN SEMI
   52          | PRINT_STATE_LN O_PAREN full_exp C_PAREN SEMI
   53          | PRINT_STATE_LN O_PAREN STRING_LITERAL C_PAREN SEMI
   54          | ID EQUAL full_exp SEMI
   55          | ID index EQUAL full_exp SEMI
   56          | RETURN full_exp SEMI

   57 index: O_SQ full_exp C_SQ
   58      | index O_SQ full_exp C_SQ

   59 full_exp: or_term

   60 or_term: and_term
   61        | or_term OR and_term

   62 and_term: eq_term
   63         | and_term AND eq_term

   64 eq_term: gr_le_term
   65        | eq_term EQEQ gr_le_term
   66        | eq_term N_EQ gr_le_term

   67 gr_le_term: add_term
   68           | gr_le_term LESS add_term
   69           | gr_le_term GREAT add_term
   70           | gr_le_term L_EQ add_term
   71           | gr_le_term G_EQ add_term

   72 add_term: mul_term
   73         | add_term PLUS mul_term
   74         | add_term MINUS mul_term

   75 mul_term: un_op
   76         | mul_term DIV un_op
   77         | mul_term MUL un_op

   78 un_op: exp
   79      | NOT un_op
   80      | PLUS un_op
   81      | MINUS un_op

   82 exp: ID
   83    | ID index
   84    | ID DOT LENGTH
   85    | ID index DOT LENGTH
   86    | INTEGER_LITERAL
   87    | TRUE
   88    | FALSE
   89    | object
   90    | ID DOT ID O_PAREN exp_list C_PAREN
   91    | object DOT ID O_PAREN exp_list C_PAREN
   92    | ID DOT ID O_PAREN C_PAREN
   93    | object DOT ID O_PAREN C_PAREN
   94    | O_PAREN full_exp C_PAREN

   95 object: THIS
   96       | NEW ID O_PAREN C_PAREN
   97       | NEW prime_type index

   98 exp_rest_list: exp_rest_list exp_rest
   99              | exp_rest

  100 exp_list: full_exp exp_rest_list
  101         | full_exp

  102 exp_rest: COMMA full_exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    THIS (258) 95
    NEW (259) 96 97
    EXTENDS (260) 7 9 11 13
    RETURN (261) 26 27 28 29 30 31 32 33 56
    LENGTH (262) 84 85
    PRINT_STATE (263) 50 51
    PRINT_STATE_LN (264) 52 53
    IF (265) 48
    ELSE (266) 48
    WHILE (267) 49
    STRING (268) 3
    CLASS (269) 3 6 7 8 9 10 11 12 13
    MAIN (270) 3
    STATIC (271) 3
    VOID (272) 3
    PUBLIC (273) 3 26 27 28 29 30 31 32 33
    SEMI (274) 16 17 18 19 20 21 26 27 28 29 30 31 32 33 50 51 52 53 54 55 56
    COMMA (275) 38 102
    NOT (276) 79
    PLUS (277) 73 80
    MINUS (278) 74 81
    EQUAL (279) 54 55
    TRUE (280) 87
    FALSE (281) 88
    DOT (282) 84 85 90 91 92 93
    O_PAREN (283) 3 26 27 28 29 30 31 32 33 48 49 50 51 52 53 90 91 92 93 94 96
    C_PAREN (284) 3 26 27 28 29 30 31 32 33 48 49 50 51 52 53 90 91 92 93 94 96
    O_BR (285) 3 6 7 8 9 10 11 12 13 26 27 28 29 30 31 32 33 46 47
    C_BR (286) 3 6 7 8 9 10 11 12 13 26 27 28 29 30 31 32 33 46 47
    O_SQ (287) 3 22 23 40 57 58
    C_SQ (288) 3 22 23 40 57 58
    STRING_LITERAL <st_l> (289) 51 53
    INTEGER_LITERAL <in_l> (290) 86
    ID <id> (291) 3 6 7 8 9 10 11 12 13 16 17 18 19 20 21 26 27 28 29 30 31 32 33 34 35 38 43 54 55 82 83 84 85 90 91 92 93 96
    INT (292) 16 19 41
    BOOL (293) 17 20 42
    AND (294) 63
    OR (295) 61
    G_EQ (296) 71
    L_EQ (297) 70
    EQEQ (298) 65
    N_EQ (299) 66
    GREAT (300) 69
    LESS (301) 68
    MUL (302) 77
    DIV (303) 76


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program <node> (50)
        on left: 1 2
        on right: 0
    main_class <main> (51)
        on left: 3
        on right: 1 2
    class_decl_list <cdl> (52)
        on left: 4 5
        on right: 1 4
    class_decl <cd> (53)
        on left: 6 7 8 9 10 11 12 13
        on right: 4 5
    var_decl_list <vdl> (54)
        on left: 14 15
        on right: 6 7 8 9 14 26 27 30 31
    var_decl <vd> (55)
        on left: 16 17 18 19 20 21
        on right: 14 15
    type_bracket_list <tp_i> (56)
        on left: 22 23
        on right: 19 20 21 22
    method_decl_list <mdl> (57)
        on left: 24 25
        on right: 6 7 10 11 24
    method_decl <md> (58)
        on left: 26 27 28 29 30 31 32 33
        on right: 24 25
    formal_list <fl> (59)
        on left: 34 35
        on right: 26 28 30 32
    formal_rest_list <frl> (60)
        on left: 36 37
        on right: 34 36
    formal_rest <fr> (61)
        on left: 38
        on right: 36 37
    type <type> (62)
        on left: 39 40
        on right: 26 27 28 29 30 31 32 33 34 35 38 40
    prime_type <prt> (63)
        on left: 41 42 43
        on right: 39 97
    statement_list <sl> (64)
        on left: 44 45
        on right: 26 27 28 29 44 46
    statement <s> (65)
        on left: 46 47 48 49 50 51 52 53 54 55 56
        on right: 3 44 45 48 49
    index <i> (66)
        on left: 57 58
        on right: 55 58 83 85 97
    full_exp <e> (67)
        on left: 59
        on right: 26 27 28 29 30 31 32 33 48 49 50 52 54 55 56 57 58 94 100 101 102
    or_term <e> (68)
        on left: 60 61
        on right: 59 61
    and_term <e> (69)
        on left: 62 63
        on right: 60 61 63
    eq_term <e> (70)
        on left: 64 65 66
        on right: 62 63 65 66
    gr_le_term <e> (71)
        on left: 67 68 69 70 71
        on right: 64 65 66 68 69 70 71
    add_term <e> (72)
        on left: 72 73 74
        on right: 67 68 69 70 71 73 74
    mul_term <e> (73)
        on left: 75 76 77
        on right: 72 73 74 76 77
    un_op <e> (74)
        on left: 78 79 80 81
        on right: 75 76 77 79 80 81
    exp <e> (75)
        on left: 82 83 84 85 86 87 88 89 90 91 92 93 94
        on right: 78
    object <obj> (76)
        on left: 95 96 97
        on right: 89 91 93
    exp_rest_list <erl> (77)
        on left: 98 99
        on right: 98 100
    exp_list <el> (78)
        on left: 100 101
        on right: 90 91
    exp_rest <er> (79)
        on left: 102
        on right: 98 99


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    main_class  go to state 3


State 1

    3 main_class: CLASS • ID O_BR PUBLIC STATIC VOID MAIN O_PAREN STRING O_SQ C_SQ ID C_PAREN O_BR statement C_BR C_BR

    ID  shift, and go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    1 program: main_class • class_decl_list
    2        | main_class •

    CLASS  shift, and go to state 6

    $default  reduce using rule 2 (program)

    class_decl_list  go to state 7
    class_decl       go to state 8


State 4

    3 main_class: CLASS ID • O_BR PUBLIC STATIC VOID MAIN O_PAREN STRING O_SQ C_SQ ID C_PAREN O_BR statement C_BR C_BR

    O_BR  shift, and go to state 9


State 5

    0 $accept: program $end •

    $default  accept


State 6

    6 class_decl: CLASS • ID O_BR var_decl_list method_decl_list C_BR
    7           | CLASS • ID EXTENDS ID O_BR var_decl_list method_decl_list C_BR
    8           | CLASS • ID O_BR var_decl_list C_BR
    9           | CLASS • ID EXTENDS ID O_BR var_decl_list C_BR
   10           | CLASS • ID O_BR method_decl_list C_BR
   11           | CLASS • ID EXTENDS ID O_BR method_decl_list C_BR
   12           | CLASS • ID O_BR C_BR
   13           | CLASS • ID EXTENDS ID O_BR C_BR

    ID  shift, and go to state 10


State 7

    1 program: main_class class_decl_list •
    4 class_decl_list: class_decl_list • class_decl

    CLASS  shift, and go to state 6

    $default  reduce using rule 1 (program)

    class_decl  go to state 11


State 8

    5 class_decl_list: class_decl •

    $default  reduce using rule 5 (class_decl_list)


State 9

    3 main_class: CLASS ID O_BR • PUBLIC STATIC VOID MAIN O_PAREN STRING O_SQ C_SQ ID C_PAREN O_BR statement C_BR C_BR

    PUBLIC  shift, and go to state 12


State 10

    6 class_decl: CLASS ID • O_BR var_decl_list method_decl_list C_BR
    7           | CLASS ID • EXTENDS ID O_BR var_decl_list method_decl_list C_BR
    8           | CLASS ID • O_BR var_decl_list C_BR
    9           | CLASS ID • EXTENDS ID O_BR var_decl_list C_BR
   10           | CLASS ID • O_BR method_decl_list C_BR
   11           | CLASS ID • EXTENDS ID O_BR method_decl_list C_BR
   12           | CLASS ID • O_BR C_BR
   13           | CLASS ID • EXTENDS ID O_BR C_BR

    EXTENDS  shift, and go to state 13
    O_BR     shift, and go to state 14


State 11

    4 class_decl_list: class_decl_list class_decl •

    $default  reduce using rule 4 (class_decl_list)


State 12

    3 main_class: CLASS ID O_BR PUBLIC • STATIC VOID MAIN O_PAREN STRING O_SQ C_SQ ID C_PAREN O_BR statement C_BR C_BR

    STATIC  shift, and go to state 15


State 13

    7 class_decl: CLASS ID EXTENDS • ID O_BR var_decl_list method_decl_list C_BR
    9           | CLASS ID EXTENDS • ID O_BR var_decl_list C_BR
   11           | CLASS ID EXTENDS • ID O_BR method_decl_list C_BR
   13           | CLASS ID EXTENDS • ID O_BR C_BR

    ID  shift, and go to state 16


State 14

    6 class_decl: CLASS ID O_BR • var_decl_list method_decl_list C_BR
    8           | CLASS ID O_BR • var_decl_list C_BR
   10           | CLASS ID O_BR • method_decl_list C_BR
   12           | CLASS ID O_BR • C_BR

    PUBLIC  shift, and go to state 17
    C_BR    shift, and go to state 18
    ID      shift, and go to state 19
    INT     shift, and go to state 20
    BOOL    shift, and go to state 21

    var_decl_list     go to state 22
    var_decl          go to state 23
    method_decl_list  go to state 24
    method_decl       go to state 25


State 15

    3 main_class: CLASS ID O_BR PUBLIC STATIC • VOID MAIN O_PAREN STRING O_SQ C_SQ ID C_PAREN O_BR statement C_BR C_BR

    VOID  shift, and go to state 26


State 16

    7 class_decl: CLASS ID EXTENDS ID • O_BR var_decl_list method_decl_list C_BR
    9           | CLASS ID EXTENDS ID • O_BR var_decl_list C_BR
   11           | CLASS ID EXTENDS ID • O_BR method_decl_list C_BR
   13           | CLASS ID EXTENDS ID • O_BR C_BR

    O_BR  shift, and go to state 27


State 17
